[package]
name = "backend-xanderlifeftoahacked"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = {version= "0.12.2", features = ["macros"]}
tokio = { version = "1", features = ["full"] }
openssl = { version = "*", features = ["vendored"] }
log = "0.4"
pretty_env_logger = "0.4"
redis = "0.25"
redis-om = { version = "*", features = ["tokio-comp"] }
# dotenv = "*"

[[bin]]
name = "main"
path = "src/main.rs"
